<resources>
    <string name="app_name">KinoStock</string>
    <string name="main_page.most_popular">Most popular movie</string>
    <string name="movieposter">movieposter</string>
    <string name="page_title" translatable="false">Juranimo!</string>
    <string name="poster_imageview" translatable="false">poster_imageview</string>
    <string name="titlemovie" translatable="false">TitleMovie</string>
    <string name="subtitle_genre" translatable="false">subTitle</string>

    <!--    DetailPageActivity-->
    <string name="error_description" translatable="false">We are very sorry. Something went wrong or the information you requested is not available</string>
    <string name="error_title" translatable="false">Some Error</string>


    <!--    BottomApp_Menu-->
    <string name="bottom_app_bar_favorites">Favorites</string>
    <string name="bottom_app_bar_watch_later">Watch Later</string>
    <string name="bottom_app_bar_video_collection">Collections</string>
    <string name="bottom_app_bar_video_home" translatable="false">home</string>

    <!--Movie sample item view -->
    <string name="movie_content_description" translatable="false">image movie in the list</string>
    <string name="release_year" translatable="false">Release year:</string>
    <string name="rating_imdb" translatable="false">Rating IMDb:</string>
    <string name="lorem_description" translatable="false">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</string>


    <!--TopApp_Menu-->
    <string name="top_app_bar_settings">Settings</string>
    <string name="lorem" translatable="false">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</string>
    <string name="share_action" translatable="false">share action</string>
    <string name="like_action" translatable="false">like action</string>
    <string name="download_action" translatable="false">download action</string>
    <string name="notification_action" translatable="false">notification action</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--Alert_Dialogs-->
    <string name="dialog_title" translatable="false">Exit</string>
    <string name="dialog_supporting_text" translatable="false">Are you sure you want to exit the application?</string>
    <string name="dialog_cancel" translatable="false">Cancel</string>
    <string name="dialog_decline" translatable="false">Decline</string>
    <string name="dialog_accept" translatable="false">Accept</string>

    <!--For favorites Fragment-->
    <string name="your_favorites_movies" translatable="false">Your favorites movies</string>
    <string name="fragment_favorites_title" translatable="false">My Favorites</string>
    <string name="main_fragment_toolbar_search" translatable="false">Search</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="permission_storage" translatable="false">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery" translatable="false">"Сохранено в галерею"</string>
    <string name="open" translatable="false">В галерею</string>
    <string name="channel_name" translatable="false">KiniStock Notifications</string>
    <string name="channel_description" translatable="false">you can set up notifications for the KinoStok application</string>
    <string name="title_notification">Movie Reminder</string>
    <string name="message_notification">"Don't forget to watch the movie "</string>

</resources>