<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/bottom_app_bar_video_home"
        app:showAsAction="withText" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/bottom_app_bar_favorites"
        app:showAsAction="withText" />
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_round_watch_later_24"
        android:title="@string/bottom_app_bar_watch_later"
        app:showAsAction="withText" />
    <item
        android:id="@+id/collection"
        android:icon="@drawable/ic_round_video_collection_24"
        android:title="@string/bottom_app_bar_video_collection"
        app:showAsAction="withText" />

</menu>